Overflow of text fixed in search, music and audio

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -14,6 +14,16 @@ html,
 body {
     overflow-x: hidden;
     height: 100%;
+
+    @media only screen and (max-width: 700px) {
+        height: auto;
+    }
+}
+
+html {
+    @media only screen and (max-width: 700px) {
+        height: auto;
+    }
 }
 
 html {
@@ -50,7 +60,7 @@ body {
     );
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: hidden;
+    // overflow: hidden;
 
     @media only screen and (max-width: 700px) {
         overflow-x: hidden;
@@ -58,7 +68,7 @@ body {
     }
 
     @media only screen and (max-width: 1000px) {
-        min-height: calc(100vh - 2 * 4vw);
+        // min-height: calc(100vh - 2 * 4vw);
     }
     @media only screen and (min-width: 1400px) {
         min-height: calc(100vh - 2 * 4vw);
