--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -10,8 +10,8 @@
     box-shadow: 0 2rem 6rem 0.5rem rgba(86, 101, 89, 0.2);
 
     @media only screen and (max-width: 1000px) {
-        height: auto;
-        margin: 4vw auto;
+        //height: 100%;
+        // margin: 4vw auto;
     }
 
     @media only screen and (max-width: 700px) {
@@ -22,7 +22,6 @@
     }
 
     @media only screen and (min-width: 1400px) {
-        height: auto;
         margin: 4vw auto;
     }
 }
@@ -135,7 +134,7 @@
         position: absolute;
         right: -4rem;
         top: 6rem;
-        z-index: 10;
+        z-index: 10000;
         padding: 2rem 0;
         width: 34rem;
         background-color: #fff;
@@ -179,18 +178,27 @@
         &.transform {
             transform: translate(0%);
         }
+
     }
 }
+
+.results.transform + .music-container {
+    // @media only screen and (max-width: 700px) {
+    //     height: 70vh;
+    // }
+}
+
 .results,
 .likes {
-    // mi-height: 100%;
-    
 
     &__list {
         list-style: none;
+        overflow: auto;
+
         @media only screen and (max-width: 700px) {
-            // height: 80%;
+            overflow: none;
         }
+        
     }
 
     &__link {
@@ -308,7 +316,7 @@
 }
 
 .music-container {
-    // height: 100%;
+    height: 100%;
     flex-grow: 1;
     background-color: $color-bg-light;
     position: relative;
@@ -362,6 +370,10 @@
         color: $color-secondary;
         font-weight: 600;
         font-size: 3rem;
+
+        &--small {
+            font-size: 2rem;
+        }
     }
 
     &__artist {
@@ -432,17 +444,23 @@
 
 .audio {
     height: 14rem;
-    width: 100%;
-    position: absolute;
+    width: 75%;
+    position: fixed;
     bottom: 0;
-    left: 0;
     z-index: 1000;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    overflow: hidden;
+
+    @media only screen and (min-width: 1400px) {
+        position: absolute;
+        width: 100%;
+        left: 0;
+    }
 
     @media only screen and (max-width: 700px) {
-        position: fixed;
+        width: 100%;
     }
 
     &__popup {
@@ -496,6 +514,7 @@
             lighten(#329d9c, 10%)
         );
         display: flex;
+        justify-content: space-between;
         padding: 1rem;
         position: relative;
 
@@ -509,6 +528,7 @@
         // top: -90%;
         width: 11rem;
         height: 11rem;
+        flex-shrink: 0;
 
         @media only screen and (max-width: 700px) {
             top: -90%;
@@ -550,9 +570,14 @@
         justify-content: space-between;
         align-items: center;
         padding-right: 20rem;
+        overflow: hidden;
+
+        @media only screen and (max-width: 1000px) {
+            padding-right: 10rem;
+        }
 
         @media only screen and (max-width: 700px) {
-            margin-left: 3rem;
+            margin-left: 0.5rem;
             padding-right: 0rem;
         }
     }
@@ -560,10 +585,28 @@
     &__details {
         font-weight: 600;
         color: $color-white;
+        overflow: hidden;
+        @media only screen and (max-width: 700px) {
+            flex: 0 0 42%;
+            justify-content: space-evenly;
+        }
     }
 
     &__title {
         font-size: 1.8rem;
+
+        @media only screen and (max-width: 700px) {
+            &--animate {
+                display: inline-block;
+                white-space: nowrap;
+                animation: animateText 10s infinite linear;
+                padding-left: 100%; // Initial offset
+    
+                &:hover {
+                    animation-play-state: paused;
+                }
+            } 
+        }
     }
 
     &__artist {
@@ -575,9 +618,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-
         @media only screen and (max-width: 700px) {
-            flex: 0 0 40%;
+            flex: 0 0 57%;
+            justify-content: space-evenly;
         }
     }
 
@@ -613,3 +656,9 @@
         transform: rotate(360deg);
     }
 }
+
+@keyframes animateText {
+    to {
+      transform: translateX(-100%);
+    }
+  }
